Replace Eq with \eq throughout.

--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.26 2009/09/16 15:47:02 ith Exp $
+% $Id: dbi.tex,v 1.27 2009/09/16 15:50:53 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.26 2009/09/16 15:47:02 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.27 2009/09/16 15:50:53 ith Exp $}
 % \input{paper1}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -395,7 +395,7 @@ into \eq{eq:nsconstraint} then yields
 
 In \Rref{lidser2}, brane inflation near the tip of a KS-type 
 throat was considered, where the warped brane tension asymptotes to a 
-constant value. In this regime, Eq. (\ref{eq:obscon1}) reduces to 
+constant value. In this regime, \eq{eq:obscon1} reduces to 
 the condition $r \simeq 2.3 (1-n_s)/\sqrt{-\fnl}$ when $|\fnl|$ is 
 sufficiently large to be detectable by Planck, 
 \ie $|\fnl| > 5$. 
@@ -417,7 +417,7 @@ with the radial coordinate over the observable range of inflaton values,
 i.e., that $dh/d \rho \ge 0$. This condition is satisfied for  
 $AdS_5 \times X_5$ compactifications and KS-type solutions. 
 Consequently, the third term in 
-Eq. (\ref{eq:obscon1}) will be semi-negative definite, 
+\eq{eq:obscon1} will be semi-negative definite, 
 which implies that 
 % 
 \begin{equation}
@@ -603,7 +603,7 @@ generalizes to a constraint on the value of $f_1 (\varphi_*)$:
 \end{equation}
 % 
 Finally, the expression for the scalar spectral index
-follows most directly by generalizing Eq. (\ref{eq:obscon1}) 
+follows most directly by generalizing \eq{eq:obscon1} 
 via the correspondence (\ref{eq:defvarphi}). It  
 is straightforward to show that
 %  
@@ -647,7 +647,7 @@ $AdS_5 \times X_5$ away from the tip of the throat. Moreover,
 if observable scales leave the horizon 
 while the brane is inside the throat, the change in the field value 
 must satisfy $| \Delta \varphi_*|<\varphi_{UV}$. Hence, it follows from   
-Eq. (\ref{eq:genphivary1}) that\footnote{We are 
+\eq{eq:genphivary1} that\footnote{We are 
 being conservative by restricting our discussion to the 
 observable phase of inflation. More generally, if 
 $f_1f_2$ remains nearly constant over the last $\N$ 
@@ -820,7 +820,7 @@ directly constrains the function
 $f_1 (\varphi )$ and this may not necessarily depend on the warp factor. 
 Nonetheless, the constraints (\ref{eq:halfwayconstraint}) and
 (\ref{eq:trapeziumlimit}) can be 
-combined with Eq. (\ref{eq:genphivary1}) to derive a limit 
+combined with \eq{eq:genphivary1} to derive a limit 
 on the tensor-scalar ratio in terms of the warp factor and the 
 kinetic function (\ref{eq:genaction-dbi}) and we find that  
 % 
