--- a/dbi/multibrane.tex
+++ b/dbi/multibrane.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % multibrane.tex - Ian Huston
-% $Id: multibrane.tex,v 1.21 2009/09/16 14:43:05 ith Exp $
+% $Id: multibrane.tex,v 1.22 2009/09/16 15:50:53 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.21 2009/09/16 14:43:05 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: multibrane.tex,v 1.22 2009/09/16 15:50:53 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -166,7 +166,7 @@ $C = \pi^2 \hat{C}T_3^2/m_s^4$ is a model-dependent constant and
 $\hat{C} \simeq n^2$ 
 is the quadratic Casimir of the $n$-dimensional representation of 
 ${\rm SU}(2)$. 
-Comparison with Eq. (\ref{eq:genaction-dbi}) 
+Comparison with \eq{eq:genaction-dbi} 
 implies that $f_1f_2 =2nW$ and $f_2=2/(T_3h^4)$. Hence, 
 the new features of this model relative to the standard single-brane 
 scenario are parametrized in terms of the fuzzy potential $W (\varphi )$. 
@@ -456,7 +456,7 @@ where the brane is moving towards the tip of the throat, but must be
 assumed as a further constraint in IR versions 
 where the brane moves out of the throat, since in these latter cases
 $\varphi_*$ could be very small. Combining the limit 
-(\ref{eq:delta1constraint}) with Eq. (\ref{eq:approxvol}) then implies that
+(\ref{eq:delta1constraint}) with \eq{eq:approxvol} then implies that
 %  
 \begin{equation}
 | \Delta V_{6,*} | > \Vol \frac{( \Delta \rho_* )^6}{h_*^4}
@@ -518,7 +518,7 @@ these bounds could be relaxed.
 % 
 \addtodo{Refer to dbi-intro}
 In the standard DBI scenario, the kinetic function defined in 
-Eq. (\ref{eq:DBIaction-dbiintro2})  takes the form
+\eq{eq:DBIaction-dbiintro2}  takes the form
 %  
 \begin{equation}
 \label{eq:DBIkinetic}
@@ -553,7 +553,7 @@ It follows that the
 bounds (\ref{eq:BMbound-multi}) and (\ref{eq:LHbound}) 
 on the tensor-scalar ratio could in principle be 
 significantly relaxed in models where $(c_sP_{,X})_* \gg 1$. 
-In view of the second relation in Eq. (\ref{eq:cspx1}), it is of interest 
+In view of the second relation in \eq{eq:cspx1}, it is of interest 
 to take a phenomenological approach and consider the more  
 general class of models where
 %  
@@ -586,16 +586,16 @@ P^2_{,XX} = \frac{\alpha}{6} P_{,X} P_{,XXX} \,.
 \end{equation}
 % 
 Changing the dependent variable to $Q \equiv P_{,XX}/P_{,X}$ 
-reduces Eq. (\ref{eq:pde-multi}) to
+reduces \eq{eq:pde-multi} to
 %  
 \begin{equation}
 \label{eq:Qdefn-multi}
 \alpha Q_{,X} = (6-\alpha )Q^2 \,,
 \end{equation}
 % 
-and it is straightforward to integrate Eq. (\ref{eq:Qdefn-multi}) 
+and it is straightforward to integrate \eq{eq:Qdefn-multi} 
 exactly. The remaining integrations can also be performed analytically 
-and the general solution to Eq. (\ref{eq:pde-multi}) for $\alpha \ne
+and the general solution to \eq{eq:pde-multi} for $\alpha \ne
 6$ is given by\footnote{The special case $\alpha =6$ results in an 
 exponential dependence of the kinetic function on $X$, and is 
 therefore an example of a higher-derivative theory. However we 
@@ -619,13 +619,13 @@ m \equiv \frac{2(\alpha -3 )}{\alpha -6} \, .
 It can be verified that the inequalities (\ref{eq:Plimits}) 
 are satisfied in the `relativistic' limit, where $X \simeq 1/f_2$.
 We consider the inflationary dynamics in this limit in what follows. 
-For completeness, we note that Eq. (\ref{eq:defalpha}) can be solved 
+For completeness, we note that \eq{eq:defalpha} can be solved 
 analytically in 
 full generality and the solution is presented in the Appendix. 
 
 
 The standard DBI scenario is recovered for $m=1/2$. 
-More generally however, Eq. (\ref{eq:gensoln-multi}) implies that  
+More generally however, \eq{eq:gensoln-multi} implies that  
 % 
 \begin{eqnarray}
 \label{eq:consequence-multi}
@@ -637,7 +637,7 @@ c_s^2 \simeq \frac{1-f_2X}{2(1-m)} \,,
 % 
 when $X \simeq 1/f_2$. Self-consistency therefore
 requires $m<1$. Moreover
-we find from Eq. (\ref{eq:fnldefn-dbiintro}) that
+we find from \eq{eq:fnldefn-dbiintro} that
 %  
 \begin{eqnarray}
 \label{eq:consequence3-multi}
@@ -837,7 +837,7 @@ h^{-4}(\rho),
 \equiv \frac{\Gamma(3/2)}{\Gamma(3/2-q)\Gamma(1+q)} \,.
 \end{equation}
 % 
-Note that the second and third terms in Eq. (\ref{eq:genP-multi}) 
+Note that the second and third terms in \eq{eq:genP-multi} 
 are singlets under the $STr$ and therefore contribute terms proportional 
 to $n$. The physics of these branes away from the large $n$ limit is particularly interesting as
 discussed further
@@ -964,7 +964,7 @@ Inspection of Eqs. (\ref{eq:2brane})-(\ref{eq:evenbrane}) implies that
 the relativistic limit is realised for any finite number of branes when 
 $(n-1)^2 \XR \rightarrow 1$. In this case, the dominant contribution 
 to the summations appearing in Eqs. (\ref{eq:oddbrane}) and (\ref{eq:evenbrane})
-will arise from the last term, Eq. (\ref{eq:unifiedgenP-multi}). In this limit, 
+will arise from the last term, \eq{eq:unifiedgenP-multi}. In this limit, 
 therefore, the kinetic function appearing in the effective action simplifies to 
 % 
 \begin{equation}
@@ -993,18 +993,18 @@ and we have effectively imposed the relativistic condition
 X \simeq \frac{1}{2} T_3 h^4 \,,
 \end{equation}
 % 
-in the numerator of Eq. (\ref{eq:unifiedgenP-multi}).  
+in the numerator of \eq{eq:unifiedgenP-multi}.  
 For the $n=2$ and $n=3$ cases, we have verified by direct 
 calculation that when one calculates the speed of sound 
 (\ref{eq:defcs-dbiintro}) and the non-linearity parameter 
 (\ref{eq:fnldefn-dbiintro}) from the general expressions (\ref{eq:2brane}) and (\ref{eq:oddbrane}) 
 and then imposes the relativistic
 limit (\ref{eq:rellimit-multi}), one arrives at the identical result 
-by starting explicitly with Eq. (\ref{eq:unifiedP-multi}).
+by starting explicitly with \eq{eq:unifiedP-multi}.
 
 
 At this point we should consider the validity of 
-the function in Eq. (\ref{eq:unifiedP-multi}). Using the
+the function in \eq{eq:unifiedP-multi}. Using the
 recursion relations defined in the previous section, 
 we see that in the large $n$ limit the kinetic function converges to 
 the corresponding function defined in the large $n$ 
@@ -1029,7 +1029,7 @@ backreaction is under control and that the kinetic function
 is still of the required form. 
 
 
-Eq. (\ref{eq:unifiedP-multi}) is precisely of the form given by the 
+\eq{eq:unifiedP-multi} is precisely of the form given by the 
 general solution (\ref{eq:gensoln-multi}), where $m=-1/2$ and 
 % 
 \begin{equation}
@@ -1038,7 +1038,7 @@ f_1 (\varphi) = 2T_3 h^4 \sqrt{1+(n-1)^2Y} , \qquad
 f_2 (\varphi) = \frac{2}{T_3 h^4} \,.
 \end{equation}
 % 
-We may therefore immediately conclude from Eq. (\ref{eq:consequence4-multi}) that $\fnl
+We may therefore immediately conclude from \eq{eq:consequence4-multi} that $\fnl
 \simeq -0.3/c_s^2$. Moreover, since $\beta \simeq 0.9$ in this scenario, 
 Eqs. (\ref{eq:consequence-multi}) and (\ref{eq:consequence3-multi}) reduce to  
 % 
@@ -1051,7 +1051,8 @@ c_sP_{,X} \simeq -1.3 \sqrt{1+(n-1)^2Y} \fnl \,.
 
 We first consider the LH bound (\ref{eq:LHbound}). This applies at least for all
 UV scenarios. It follows after substitution of the relativistic limit
-(\ref{eq:rellimit-multi}) into the scalar perturbation amplitude, Eq. (\ref{eq:Ps-dbiintro}),
+(\ref{eq:rellimit-multi}) into the scalar perturbation amplitude,
+\eq{eq:Ps-dbiintro},
 that 
 % 
 \begin{equation}
@@ -1061,7 +1062,7 @@ that
 \end{equation}
 % 
 Substituting the tensor-scalar ratio (\ref{eq:rdefn-dbiintro}) into  
-Eq. (\ref{eq:usefulPs-multi}) then results in a constraint on the magnitude of 
+\eq{eq:usefulPs-multi} then results in a constraint on the magnitude of 
 the warp factor during observable inflation:
 %  
 \begin{equation}
@@ -1361,13 +1362,13 @@ $m \ne - 1/2$ arises in other string-inspired settings.
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 
-Eq. (\ref{eq:defalpha}) can be analytically solved in full 
+\eq{eq:defalpha} can be analytically solved in full 
 generality without imposing the limits (\ref{eq:Plimits}) on the 
 derivatives of the kinetic function. This allows us to determine the 
 most general class of models where the non-linearity parameter 
 satisfies the condition $\fnl \propto 1/c_s^2$ at leading order. 
 
-In general Eq. (\ref{eq:defalpha}) takes the form 
+In general \eq{eq:defalpha} takes the form 
 % 
 \begin{equation}
 \label{eq:genPXeqn-multi}
@@ -1383,7 +1384,7 @@ and this reduces to
 \end{equation}
 % 
 where $Q \equiv P_{,XX}/P_{,X}$. 
-Eq. (\ref{eq:genreduce-multi}) can be transformed into the 
+\eq{eq:genreduce-multi} can be transformed into the 
 linear equation
 % 
 \begin{equation}
@@ -1392,7 +1393,7 @@ U_{,X}+ \frac{3(2-\alpha )}{2\alpha} \frac{U}{X} = \frac{\alpha -6}{\alpha}
 \end{equation}
 % 
 after the change of variables $U \equiv 1/Q$
-and the general solution to Eq. (\ref{eq:lineargen-multi}) is given by
+and the general solution to \eq{eq:lineargen-multi} is given by
 %  
 \begin{equation}
 \label{eq:gensolnlinear-multi}
@@ -1409,7 +1410,7 @@ P_{,X} = f_1 (\varphi ) \left( 1- f_2(\varphi ) X^{-s} \right)^{1/(2s)}  \, ,
 % 
 where $s \equiv (\alpha -6 )/(2 \alpha)$ and we have redefined 
 the arbitrary integration functions $f_i(\varphi )$.  
-Finally Eq. (\ref{eq:secondint-multi}) can be formally integrated 
+Finally \eq{eq:secondint-multi} can be formally integrated 
 in terms of a hypergeometric function
 %  
 \begin{equation}
