Added review of other DBI models.

--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.27 2009/09/16 15:50:53 ith Exp $
+% $Id: dbi.tex,v 1.28 2009/09/17 17:02:07 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.27 2009/09/16 15:50:53 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.28 2009/09/17 17:02:07 ith Exp $}
 % \input{paper1}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -737,10 +737,60 @@ next Section.
 \label{sec:others-dbi}
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
+We have seen how the standard DBI model appears to be in conflict with
+observations. Many attempts have been made to modify the original scenario in
+order to evade these bounds. These can be classified mainly according to
+whether they involve single and multi fields. 
 
+Single field models have the same single degree of freedom as DBI inflation but
+rely on other physical mechanisms to ease the above bounds. Wrapping branes
+around the compact extra dimensions leads to a change in the relationship
+between $\rho$ and $\vp$ from that defined in Section~\ref{sec:dbiinflation}
+\cite{Kobayashi:2007hm, Becker:2007ui, Ward:2007gs}.  This allows the bounds on
+$r$ to be eased but the parameter space of these models is still severly
+limited by WMAP5 \cite{Alabidi:2008ej}. 
+
+Another interesting proposal is warped Wilson line DBI. Instead of the position
+of the brane being used as the inflaton, Wilson line moduli are turned on and
+take the role instead \cite{Avgoustidis:2008zu}. This scenario is T-dual to the
+standard DBI model with non-parallel branes. Instead of the upper bound on $r$
+in \eq{eq:upperbound} a similar analysis in this case leads to a second
+consistent lower bound. Thus there is no conflict as long as enough tensor
+modes are produced that both lower bounds are met. 
 % 
-% 
-% 
+Changing the geometry can also allow larger field ranges. By considering
+D4-branes in compactified manifolds containing monodromies extremely large
+field ranges can be achieved. These lead to possibly observable tensor modes
+\cite{Silverstein:2008sg}.
+
+
+The warped throat is six-dimensional so it is natural to consider the case when
+the D3-brane is not fixed on the radial trajectory as in
+Refs.~\cite{Easson:2009kk} and \cite{Huang:2007hh}. Increasing the degrees of
+freedom introduces the possibility of entropy mode production. This leads to a
+change in the predictions for the amount and type of non-gaussianity produced
+and can ease the constraints on $r$ \cite{Arroja:2008yy, Langlois:2009ej,
+Langlois:2008qf, Langlois:2008wt, Mizuno:2009mv, Mizuno:2009cv}. Differences in
+the bi- and tri-spectra could enable multi-field DBI models to be distinguished
+from single field ones. In particular in appears that multi-field DBI models
+have a unique tri-spectrum term with amplitude $\propto \fnlloc\fnleq$
+\cite{RenauxPetel:2009sj}. This opens the possibility of a distinct
+observational signature for this type of model.
+
+Other multi-field models introduce copies of the single DBI action with either
+the same or different sound speeds \cite{Cai:2008if, Cai:2009hw}, or apply the
+curvaton scenario [cite***] to the DBI case \cite{Li:2008fm, Kobayashi:2009cm}.
+
+We have not yet addressed models with multiple branes but only one effective
+degree of freedom. Multiple M5-branes in M-theory act with an effective single
+degree of freedom but the Lythbound is now significantly weakened and large
+field ranges are possible \cite{Krause:2007jr}. It is also possible to consider
+the case of $n$ coincident D3-branes in a warped throat \cite{thomasward, hltw,
+Ward:2007gs}. In Chapter~\ref{ch:multibrane} we investigate this model in both
+the large and small $n$ limits and show how the constraints derived in this
+chapter can be applied.
+
+
 % 
 % 
 % 
