Changed to new calabi-Yau graphic.

--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.39 2009/09/16 15:32:59 ith Exp $
+% $Id: dbi-intro.tex,v 1.40 2009/09/18 14:39:57 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.39 2009/09/16 15:32:59 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.40 2009/09/18 14:39:57 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -524,10 +524,9 @@ equation for the inflaton is determined by a DBI action.
 % 
 \begin{figure}
  \centering
- \includegraphics[width=0.8\textwidth]{dbi/graphs/braneworld4.jpg}
- % braneworld4.pdf: 612x792 pixel, 72dpi, 21.59x27.94 cm, bb=0 0 612 792
- \caption{A representation of the 6 compactified dimensions.
-D3-branes appear as dots. ***Change to better quality***}
+ \includegraphics[width=\textwidth]{dbi/graphs/cymanifold}
+ \caption{A representation of the Calabi-Yau manifold in the 6 compactified
+dimensions. Throats are connected to the main bulk. D3-branes appear as dots.}
  \label{fig:braneworld}
 \end{figure}
 % 
@@ -657,7 +656,9 @@ from purely Gaussian statistics may be large
 \cite{brane6,brane11,lidser3,chenetal}. 
 DBI inflation produces non-gaussianity maximised in the equilateral
 configuration and the leading contribution is in the form of
-\eq{eq:fnldefn-dbiintro}. When $c_s\PX=1$ the term $\Lambda$ defined in
+\eq{eq:fnldefn-dbiintro}. 
+\addtodo{Change as 2lambda in fact equals 1/cs2 -1}
+When $c_s\PX=1$ the term $\Lambda$ defined in
 \eq{eq:deflambda-dbiintro} is identically zero and $\fnleq$ becomes
 \cite{chenetal,lidser2}
 % 
