--- a/dbi/dbi-intro.tex
+++ b/dbi/dbi-intro.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % % 
 % dbi-intro.tex - Ian Huston
-% $Id: dbi-intro.tex,v 1.40 2009/09/18 14:39:57 ith Exp $
+% $Id: dbi-intro.tex,v 1.41 2009/09/18 15:24:01 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.40 2009/09/18 14:39:57 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi-intro.tex,v 1.41 2009/09/18 15:24:01 ith Exp $}
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
@@ -467,7 +467,8 @@ a volume $\mathrm{Vol} (T^{1,1}) = 16\pi^3/27$ and  topology
 $S^2\times S^3$, where the $S^2$ is fibred over the $S^3$.
 
 \begin{figure}
-\missingfigure{Add figure of warped deformed conifold}   
+\centering
+\includegraphics{dbi/graphs/deformed-conifold}   
 \caption{A conifold can be deformed to remove the singularity at the tip.}
 \label{fig:conifold-dbiintro}
 \end{figure}
