Move some DBI review from multi to dbi.

--- a/dbi/dbi.tex
+++ b/dbi/dbi.tex
@@ -1,9 +1,9 @@
 % % % % % % % % % % % % % % % % % % % % % 
 % dbi.tex - Ian Huston
-% $Id: dbi.tex,v 1.29 2009/09/18 15:24:08 ith Exp $
+% $Id: dbi.tex,v 1.30 2009/09/18 15:38:39 ith Exp $
 % % % % % % % % % % % % % % % % % % % % % 
 % Redefine CVSRevision for this section
-\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.29 2009/09/18 15:24:08 ith Exp $}
+\renewcommand{\CVSrevision}{\version$Id: dbi.tex,v 1.30 2009/09/18 15:38:39 ith Exp $}
 
 % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % % 
 % =========================================================== %
@@ -755,12 +755,41 @@ order to evade these bounds. These can be classified mainly according to
 whether they involve single and multi fields. 
 
 Single field models have the same single degree of freedom as DBI inflation but
-rely on other physical mechanisms to ease the above bounds. Wrapping branes
-around the compact extra dimensions leads to a change in the relationship
+rely on other physical mechanisms to ease the above bounds.
+A natural extension to the single ${\rm D3}$-brane model 
+is to consider a ${\rm D}p$-brane wrapped around a $(p-3)$-cycle of the 
+internal space.
+This leads to a change in the relationship
 between $\rho$ and $\vp$ from that defined in Section~\ref{sec:dbiinflation}
-\cite{Kobayashi:2007hm, Becker:2007ui, Ward:2007gs}.  This allows the bounds on
-$r$ to be eased but the parameter space of these models is still severly
+\cite{Kobayashi:2007hm, Becker:2007ui, Ward:2007gs}.  
+For example, Becker \etal \cite{Becker:2007ui} 
+have proposed a model where inflation is driven by a ${\rm D5}$-brane. 
+In this case, the range of allowed values for the inflaton 
+becomes independent of the throat charge, $N$, which weakens the upper bound on 
+the tensor-scalar ratio to $r \lsim 0.04$. Strictly speaking this is 
+only true for the ${\rm D7}$-brane case, since the
+wrapped ${\rm D5}$-brane imposes 
+$\Delta \varphi \sim N^{-1/4}$.
+However in arriving at this bound, it was assumed that the 
+backreaction effects of any fluxes in the throat were 
+negligible. 
+Kobayashi \etal \cite{Kobayashi:2007hm} 
+considered both ${\rm D5}$- and
+${\rm D7}$-brane models, but concluded that the former case
+required an excessively large background charge in 
+order to relax the bounds on $r$. Whilst this is highly constraining, it is
+still much better than
+the
+case for single ${\rm D3}$-branes which require a much higher background charge
+- and therefore are
+effectively ruled
+out as a predictive model. 
+Thus wrapped brane configurations are preferable to
+single brane models but the parameter space of these models is still severly
 limited by WMAP5 \cite{Alabidi:2008ej}. 
+% However
+% the difficulty in these models is that the backreaction is no longer under
+% control. 
 
 Another interesting proposal is warped Wilson line DBI. Instead of the position
 of the brane being used as the inflaton, Wilson line moduli are turned on and
@@ -778,7 +807,7 @@ field ranges can be achieved. These lead to possibly observable tensor modes
 
 The warped throat is six-dimensional so it is natural to consider the case when
 the D3-brane is not fixed on the radial trajectory as in
-Refs.~\cite{Easson:2009kk} and \cite{Huang:2007hh}. Increasing the degrees of
+Refs.~\cite{spinflation} and \cite{Huang:2007hh}. Increasing the degrees of
 freedom introduces the possibility of entropy mode production. This leads to a
 change in the predictions for the amount and type of non-gaussianity produced
 and can ease the constraints on $r$ \cite{Arroja:2008yy, Langlois:2009ej,
@@ -790,8 +819,10 @@ have a unique tri-spectrum term with amplitude $\propto \fnlloc\fnleq$
 observational signature for this type of model.
 
 Other multi-field models introduce copies of the single DBI action with either
-the same or different sound speeds \cite{Cai:2008if, Cai:2009hw}, or apply the
-curvaton scenario [cite***] to the DBI case \cite{Li:2008fm, Kobayashi:2009cm}.
+the same or different sound speeds \cite{Cai:2008if, Cai:2009hw},  use
+different throat geometries \cite{Gmeiner:2007uw},
+or apply the curvaton scenario \cite{Lyth:2001nq} to the DBI case
+\cite{Li:2008fm, Kobayashi:2009cm}.
 
 We have not yet addressed models with multiple branes but only one effective
 degree of freedom. Multiple M5-branes in M-theory act with an effective single
